# test_task_cpp

./: .gitignore  CMakeLists.txt  README.adoc
source/: debug_logger.cpp  debug_logger.h
