cmake_minimum_required(VERSION 3.0)

project(test_task_cpp)

set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/source)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

file(GLOB SOURCE_EXE ${CMAKE_SOURCE_DIR}/*.cpp)

add_executable(${PROJECT_NAME} ${SOURCE_EXE})